[package]
name = "sdf"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive", "min_const_generics"] }
cgmath = "0.18.0"
thiserror = "1.0.61"
wgpu = "0.20.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.20.1", features = ["webgl"] }
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

[dev-dependencies]
cfg-if = "1.0.0"
futures = "0.3.29"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
winit = { version = "0.29" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
